# hello_grpc

./: .gitignore  BUILD  BUILD.bazel  Dockerfile  Jenkinsfile  MODULE.bazel  README.md  github-credentials.yaml  jenkins-pipeline.yaml  jenkins-webhook.yaml  requirements.in  requirements.txt  requirements_lock.txt  setup-jenkins-pipeline.sh
.github/workflows/: docker-build.yml
.jenkins/: README.md  setup-credentials.sh  setup-webhook.sh
docker/: Dockerfile.grpc  Dockerfile.ui  README.md  docker-compose.yml
k8s/: deployment.yaml
khushal_hello_grpc/deployment/postgres/: 01_create_tables.sql  02_sample_data.sql  README.md  grpc_requests_schema.sql  users_schema.sql
khushal_hello_grpc/src/common/: BUILD.bazel  __init__.py  logging_config.py
khushal_hello_grpc/src/common/metrics/: BUILD.bazel  __init__.py  prometheus.py
khushal_hello_grpc/src/common/storage/: BUILD.bazel  __init__.py  database.py  lock_manager.py  models.py  postgres.py
khushal_hello_grpc/src/common/utils/: BUILD.bazel  __init__.py  env.py
khushal_hello_grpc/src/server/: BUILD.bazel  server.py
khushal_hello_grpc/src/server/config/: README.md  __init__.py  dev.yaml  prod.yaml
khushal_hello_grpc/src/server/handlers/: BUILD.bazel  __init__.py  request_handler.py
khushal_hello_grpc/src/server/impl/: BUILD.bazel  service_impl.py
khushal_hello_grpc/src/server/models/: __init__.py  grpc_models.py
khushal_hello_grpc/src/server/storage/: BUILD.bazel  __init__.py  grpc_request_store.py
khushal_hello_grpc/src/ui/: BUILD.bazel  README.md  __init__.py
khushal_hello_grpc/src/ui/config/: BUILD.bazel  README.md  __init__.py  dev.yaml  prod.yaml
khushal_hello_grpc/src/ui/frontend/: __init__.py
khushal_hello_grpc/src/ui/frontend/assets/css/: style.css
khushal_hello_grpc/src/ui/frontend/react/: README.md  package.json
khushal_hello_grpc/src/ui/frontend/static/: dashboard.html  index.html  login.html
khushal_hello_grpc/src/ui/frontend/static/assets/css/: auth.css  dashboard.css  style.css
khushal_hello_grpc/src/ui/frontend/static/assets/js/: auth.js  client.js  dashboard.js  home.js
khushal_hello_grpc/src/ui/server/: BUILD.bazel  __init__.py  server.py
khushal_hello_grpc/src/user_service/: BUILD.bazel  README.md  server.py
khushal_hello_grpc/src/user_service/config/: BUILD.bazel  __init__.py  dev.yaml  prod.yaml
khushal_hello_grpc/src/user_service/handlers/: BUILD.bazel  __init__.py  user_handler.py
khushal_hello_grpc/src/user_service/impl/: BUILD.bazel  user_service_impl.py
khushal_hello_grpc/src/user_service/models/: BUILD.bazel  user_models.py
khushal_hello_grpc/src/user_service/protos/: BUILD.bazel
khushal_hello_grpc/src/user_service/storage/: BUILD.bazel  __init__.py  user_store.py
khushal_hello_grpc/tests/: BUILD.bazel  test_server.py  test_user_service.py
khushal_hello_grpc/tests/ui/: test_ui_server.py
protos/: BUILD.bazel  hello.proto  user.proto
server/: BUILD.bazel  server.py
server/impl/: BUILD.bazel  service_impl.py
tests/: BUILD.bazel  test_server.py
