# This proto_library exposes the .proto files for use by other Bazel targets.
# The genrule in khushal_hello_grpc/src/generated/ picks up these protos and generates Python code from them at build time.
proto_library(
    name = "hello_proto",
    srcs = glob(["*.proto"]),
    visibility = ["//visibility:public"],
)

exports_files(["hello.proto"], visibility = ["//visibility:public"]) 