load("@my_pip_deps//:requirements.bzl", "requirement")

py_test(
    name = "test_server",
    srcs = ["test_server.py"],
    deps = [
        "//khushal_hello_grpc/src/server/impl:impl_lib",
        "//khushal_hello_grpc/src/generated:hello_generated",
        requirement("grpcio-health-checking"),
        requirement("grpcio"),
    ],
)

py_test(
    name = "test_ui_server",
    srcs = ["ui/test_ui_server.py"],
    deps = [
        "//khushal_hello_grpc/src/ui/server:ui_lib",
        "//khushal_hello_grpc/src/generated:hello_generated",
        "//khushal_hello_grpc/src/common:common_lib",
        requirement("aiohttp"),
        requirement("pytest"),
        requirement("grpcio"),
    ],
) 