load("@my_pip_deps//:requirements.bzl", "requirement")

exports_files(["server.py"], visibility = ["//visibility:public"])

py_library(
    name = "server_lib",
    srcs = glob(["*.py"]),
    deps = [
        "//khushal_hello_grpc/src/server/impl:impl_lib",
        "//khushal_hello_grpc/src/server/storage:storage_lib",
        "//khushal_hello_grpc/src/server/models:models_lib",
        "//khushal_hello_grpc/src/server/handlers:handlers_lib",
        "//khushal_hello_grpc/src/server/config:config",
        "//khushal_hello_grpc/src/common:common_lib",
        requirement("grpcio-health-checking"),
        requirement("grpcio"),
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "hello_server",
    srcs = glob(["*.py"]),
    deps = [":server_lib"],
    main = "server.py",
) 