load("@my_pip_deps//:requirements.bzl", "requirement")

exports_files([
    "frontend/static/index.html",
    "frontend/assets/css/style.css",
    "frontend/assets/js/client.js",
], visibility = ["//visibility:public"])

filegroup(
    name = "all_static",
    srcs = glob(["frontend/static/**/*"]),
    visibility = ["//visibility:public"],
)

py_library(
    name = "ui_lib",
    srcs = glob(["*.py"]),
    deps = [
        "//khushal_hello_grpc/src/generated:hello_generated",
        "//khushal_hello_grpc/src/common:common_lib",
        requirement("aiohttp"),
        requirement("aiohttp-cors"),
        requirement("grpcio"),
    ],
    visibility = ["//visibility:public"],
) 