load("@my_pip_deps//:requirements.bzl", "requirement")

# Export all static files for other packages to use
filegroup(
    name = "all_static",
    srcs = glob(["frontend/static/**/*"]),
    visibility = ["//visibility:public"],
)

py_library(
    name = "ui_lib",
    srcs = glob(["*.py"]),
    deps = [
        "//khushal_hello_grpc/src/generated:generated",
        "//khushal_hello_grpc/src/common:common_lib",
        requirement("aiohttp"),
        requirement("aiohttp-cors"),
        requirement("grpcio"),
    ],
    visibility = ["//visibility:public"],
) 