load("@my_pip_deps//:requirements.bzl", "requirement")

py_library(
    name = "ui_lib",
    srcs = glob(["*.py"]),
    deps = [
        "//khushal_hello_grpc/src/generated:hello_generated",
        "//khushal_hello_grpc/src/common:common_lib",
        "//khushal_hello_grpc/src/ui/config:config",
        requirement("aiohttp"),
        requirement("aiohttp-cors"),
        requirement("grpcio"),
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "ui",
    srcs = ["server.py"],
    data = ["//khushal_hello_grpc/src/ui:all_static"],
    deps = [
        ":ui_lib",
        "//khushal_hello_grpc/src/generated:hello_generated",
        "//khushal_hello_grpc/src/common:common_lib",
        "//khushal_hello_grpc/src/ui/config:config",
        requirement("aiohttp"),
        requirement("aiohttp-cors"),
        requirement("grpcio"),
    ],
    main = "server.py",
) 