load("@my_pip_deps//:requirements.bzl", "requirement")

py_library(
    name = "impl_lib",
    srcs = glob(["*.py"]),
    deps = [
        "//khushal_hello_grpc/src/generated:generated",
        "//khushal_hello_grpc/src/user_service/handlers:handlers_lib",
        requirement("grpcio"),
    ],
    visibility = ["//visibility:public"],
) 